--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   flutter_speed_dial: ^6.0.0
   google_fonts: ^3.0.1
   flutter_svg: ^1.1.4
+  mapbox_gl: ^0.16.0
+  device_info_plus: ^3.2.2
+  location: ^4.4.0
 
 dev_dependencies:
   flutter_test:
