--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   mapbox_gl: ^0.16.0
   device_info_plus: ^3.2.2
   location: ^4.4.0
+  firebase_storage: ^10.3.11
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +71,13 @@ flutter:
     - assets/
     - assets/adtour_logo.svg
     - assets/cultural_background.jpg
+    - assets/fill/cat_silhouette_pattern.png
+    - assets/symbols/custom-icon.png
+    - assets/symbols/2.0x/custom-icon.png
+    - assets/symbols/3.0x/custom-icon.png
+    - assets/style.json
+    - assets/sydney.png
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
