--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   latlong: ^0.6.1
   maps_toolkit: ^2.0.1
   firebase_analytics: ^9.3.8
+  dropdown_button2: ^1.8.9
 
 dev_dependencies:
   flutter_test:
